--- a/index.html
+++ b/index.html
@@ -10,27 +10,27 @@
     <div class="container">
         <div class="anh1">
             <div class="noidung">Fujifilm</div>
-            <div><img src="mayanh1.jpg" alt="" class="mayanh1"></div>
+            <div><img src="https://github.com/qduong81/baimayanh/blob/main/mayanh1.jpg?raw=true" alt="" class="mayanh1"></div>
         </div>
         <div class="anh1">
             <div class="noidung">Fujifilm</div>
-            <div><img src="mayanh1.jpg" alt="" class="mayanh1"></div>
+            <div><img src="https://github.com/qduong81/baimayanh/blob/main/mayanh1.jpg?raw=true" alt="" class="mayanh1"></div>
         </div>
         <div class="anh1">
             <div class="noidung">Fujifilm</div>
-            <div><img src="mayanh1.jpg" alt="" class="mayanh1"></div>
+            <div><img src="https://github.com/qduong81/baimayanh/blob/main/mayanh1.jpg?raw=true" alt="" class="mayanh1"></div>
         </div>
         <div class="anh1">
             <div class="noidung">Fujifilm</div>
-            <div><img src="mayanh1.jpg" alt="" class="mayanh1"></div>
+            <div><img src="https://github.com/qduong81/baimayanh/blob/main/mayanh1.jpg?raw=true" alt="" class="mayanh1"></div>
         </div>
         <div class="anh1">
             <div class="noidung">Fujifilm</div>
-            <div><img src="mayanh1.jpg" alt="" class="mayanh1"></div>
+            <div><img src="https://github.com/qduong81/baimayanh/blob/main/mayanh1.jpg?raw=true" alt="" class="mayanh1"></div>
         </div>
         <div class="anh1">
             <div class="noidung">Fujifilm</div>
-            <div><img src="mayanh1.jpg" alt="" class="mayanh1"></div>
+            <div><img src="https://github.com/qduong81/baimayanh/blob/main/mayanh1.jpg?raw=true" alt="" class="mayanh1"></div>
         </div>
     </div>
 </body>
